@@ -1,3 +1,0 @@
-<?php
-// language scripts would go here
-$_lang['default'] = 'Default';
