@@ -1,11 +1,14 @@
 --------------------
 Snippet: getCache
 --------------------
-Version: 1.0.1-dev
+Version: 1.1.0-dev
+Released: March 20, 2013
 Since: October 21, 2010
 Author: Jason Coward <jason@modx.com>
 
 A generic caching snippet for MODX Revolution 2.1+. It allows caching the output of any MODx Element using a fully configurable cache handler.
+
+This extra also provides a custom connector/processor for triggering a refresh of custom cache partitions via PHP API or Javascript (for MODX Menus).
 
 Official Documentation:
 http://github.com/opengeek/getCache/wiki
