@@ -1,0 +1,2 @@
+<?php
+$_lang['refreshing_partition'] = "Refreshing cache partition [[+partition]]: ";
